--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "eslint": "^4.12.0",
+    "eslint": "^4.12.1",
+    "eslint-plugin-vue": "^4.0.0-beta.2",
     "file-loader": "^1.1.4",
     "pug": "^2.0.0-rc.4",
     "pug-html-loader": "^1.1.5",
