--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^4.7.0",
+    "stylus-resources-loader": "0.0.4",
     "vue": "^2.4.4",
     "vue-resource": "^1.3.4",
     "vuefire": "^1.4.5"
