--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open 'google-chrome-stable' --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
@@ -36,6 +36,7 @@
     "pug-html-loader": "^1.1.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "vue-awesome": "^2.3.4",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "vuex": "^3.0.1",
